<resources>
    <string name="app_name">Social Browser</string>

    <string name="title_section1">Facebook</string>
    <string name="title5">History is disabled by default to save memory\ncheck to enable it </string>
    <string name="title_section2">Twitter</string>
    <string name="title_section3">Youtube</string>
    <string name="title_section4">Instgram</string>
    <string name="Open_backgroundTab">Open in backgroundTab</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_about">About</string>
    <string name="action_Show">Add new Tab</string>
    <string name="ref">Refresh</string>
    <string name="copurl">Copy URL to ClipBoard</string>
    <string name="open">Open in Browser</string>
    <string name="s">Open in Another Browser</string>
    <string name="action_refresh">s</string>
    <string name="mn">http://www.ultimarad.com</string>
    <string name="info"><![CDATA[ULTIMARAD SOLUTIONS]]></string>
    <string name="nbm">Social Browser</string>
    <string name="ok">OK</string>
    <string name="action_fullscreen">fullscreen</string>
    <string name="vertical_ellipsis">&#8942;</string>
    <string name="search_hint">hint</string>
    <string name="sxz">Search History</string>
    <string name="NEW">NEW!! </string>
    <color name="myorange">#f56415</color>
    <string name="neww"><![CDATA[<p>NEW!!<p>]]></string>
    <!--<string name="banner_ad_unit_id">ca-app-pub-5465719974789556/1437800228</string>-->
    <string name="banner_ad_unit_id">ca-app-pub-5465719974789556/6013627029</string>
    <string name="fc">——————————————————————————————————————————————————————————————————————————————————————</string>
    <string name="line">________________________________________________________________________________________________________________________________________________________________</string>
    <string name="done">Done</string>
    <string name="action_Theme">Theme</string>
    <string name="z">Version 1.0</string>
    <string name="imag">s</string>
    <string name="def">Reddish Grey</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="action_EditTab">Edit Tab</string>
    <string name="action_RemoveTab">Remove Tab</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="nav_item_home">Home</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Messages</string>
    <string name="action_forward">forward</string>
    <string name="action_back">back</string>
    <string name="Save_Tabs">Save Tabs</string>
    <string name="Open">Open</string>
    <string name="Copy">Copy</string>
    <string name="show_backTabs">[1]</string>
    <string name="Multi_Window">Split screen</string>
    <string name="share">Share</string>
    <string name="Bookmark">Add to Bookmark</string>
    <string name="dontshowthisagain">Don\'t show this again</string>
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_friends</item>
        <item>@string/nav_item_notifications</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="moree">Load More</string>
    <string name="e">e</string>
    <string name="tabs_to_add">Tabs To Add</string>
    <string name="backArrow">➡</string>
    <string name="about">About</string>
    <string name="site_url_ie_facebook_com">Site URL </string>
    <string name="type_the_tab_name_here">type the tab name here</string>
    <string name="tab_name">Tab name</string>
    <string name="type_the_tab_url_ie_facebook_com">type the tab url ie: facebook.com</string>
</resources>
