<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDarkW"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:orientation="horizontal">

        <Button
            android:id="@+id/backHistory"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:rotation="180"
            android:text="@string/backArrow"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/about"
            android:textColor="#151414"
            android:textColorLink="?attr/actionMenuTextColor"
            android:textSize="30sp"
            android:textStyle="normal|bold|italic" />
    </LinearLayout>


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_weight="0.32"
        android:contentDescription="@string/imag"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/nbm"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/z"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#020002" />

    <TextView
        android:id="@+id/about"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/info"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/SiteLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="onLinkClick"
        android:text="@string/mn"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#862dff"
        android:textStyle="bold" />

</LinearLayout>