<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/manualLy"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryD"
    android:orientation="vertical"
    android:paddingBottom="20dp">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/imageView3"
        android:orientation="vertical"
        android:weightSum="7">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="12dp"
            android:text="@string/site_url_ie_facebook_com"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff"
            android:textSize="35sp" />

        <EditText
            android:id="@+id/urlTEXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:background="@color/colorPrimaryDarkW"
            android:gravity="center"
            android:hint="@string/type_the_tab_url_ie_facebook_com"
            android:imeOptions="actionNext"
            android:inputType="textUri"
            android:textColor="@color/textColorPrimary"
            android:textColorHint="@color/colorPrimaryD"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingStart="12dp"
            android:text="@string/tab_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff"
            android:textSize="35sp" />

        <EditText
            android:id="@+id/nameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="2.5"
            android:background="@color/colorPrimaryDarkW"
            android:gravity="center"
            android:hint="@string/type_the_tab_name_here"
            android:imeOptions="actionDone"
            android:textColor="@color/textColorPrimary"
            android:textColorHint="@color/colorPrimaryD"
            android:textSize="25sp" />


        <WebView
            android:id="@+id/iconGetter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="21dp"
            android:visibility="gone" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="77dp"
        android:layout_height="66dp"
        android:layout_alignBottom="@+id/imageView3"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="90dp"
        app:srcCompat="@drawable/ic_launcher" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout4"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="10dp"
        android:text="Check URL" />

</RelativeLayout>